--- a/index.css
+++ b/index.css
@@ -1,4 +1,12 @@
 #navbar{
 	background-color: #909090;
+	font-color: #D8D8D8;
 	text-align: center;
+	font-family: "Times New Roman", Georgia, Serif;
+}
+#name{
+	font-size: 23px;
+}
+#caption{
+	font-size: 10px;
 }
