--- a/index.css
+++ b/index.css
@@ -3,6 +3,8 @@
 	font-color: #D8D8D8;
 	text-align: center;
 	font-family: "Times New Roman", Georgia, Serif;
+	border-width: 7px medium 7px 7px;
+	border-style: solid solid solid solid;
 }
 #name{
 	font-size: 23px;
